- Fix some tests for new periodictable release.
- Stop using deprecated setuptools module.
- Analysis for polarised neutron reflectometry.

0.1.52
------
- relax reflection kernel accuracy for i386. Necessary for Debian build.
- add Orso file output to `reduce.reduce_stitch`.
- Improve performance of ReflectModelTL, laying groundwork for footprint
  correction.

0.1.53
------
- Reduction - fallback to normalising by time if no beam monitor counts are
  present.
- renamed test directories from refnx.<module>.test to refnx.<module>.tests.
  This is to prevent name shadowing, but also to bring it into line with e.g.
  scipy/numpy that use that nomenclature. This might mean downstream packages
  who use files from those directories have to do some renaming.

0.1.54
------
- Replaced several instances of __file__ with importlib.resources.
- Fixed bug in ManualBeamFind.

0.1.55
------
- Added example for reading/writing ORSO model language file, working with
  ORSO dataset.
- refnx.dataset.OrsoDataset.setup_analysis() method creates a Structure,
  ReflectModel, and Objective, if there was an ORSO model language description
  of the interfacial model within the ORSO file.
- refnx.dataset.OrsoDataset.update_model() method updates the model
  description within the ORSO file from a given Structure.
- XRDML v2.0 file reader updates.

0.1.56
------
- added a Footprint class to correct for over-illumination of samples at low
  angles. This class is used by ReflectModelTL.

0.1.57
------
- rejig PolarisedReflectModel to calculate all four spin states with
 memoisation.
- create PolarisedReflectDatasets to hold four SpinChannel datasets.

0.1.58
------
- Loading an OrsoDataset into the GUI will also load the model, if it contains
  one.

0.1.59
------
- Add guide for how weighting is carried out in FAQ documentation.
- Structure.sld_profile; MagneticSlab can now be first or last Component,
  it's not mandatory for it to be a Slab.